--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,12 @@ authors = ["freemt <yucongo+fmt@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.7"
 importlib-metadata = "^3.7.2"
+linetimer = "^0.1.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 tbump = "^6.3.1"
+ipython = "^7.21.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
