--- a/tbump.toml
+++ b/tbump.toml
@@ -23,7 +23,7 @@ tag_template = "v{new_version}"
 # section containing the path of the file, relative to the
 # tbump.toml location.
 [[file]]
-src = "*/__init__.py"
+src = ["*/__init__.py", "package.json"]
 
 # You can specify a list of commands to
 # run after the files have been patched
