--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "deepl-scraper-pyppeteer",
-  "version": "0.1.2",
+  "version": "0.1.1",
   "description": "deepl scraper pp",
   "main": "index.js",
   "repository": "git@github.com:ffreemt/deepl-scraper-pyppeteer.git",
   "author": "freemt",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts":
 }
