--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ python = "^3.7"
 linetimer = "^0.1.4"
 pyquery = "^1.4.3"
 logzero = "^1.6.3"
-get-ppbrowser = {git = "https://github.com/ffreemt/get-ppbrowser.git", rev = "dev"}
+get-ppbrowser = "^0.1.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
