--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,53 +1,32 @@
-appdirs==1.4.4
-appnope==0.1.2; sys_platform == "darwin"
-atomicwrites==1.4.0; sys_platform == "win32"
-attrs==19.3.0
-backcall==0.2.0
-cli-ui==0.10.3
-colorama==0.4.4
-contextlib2==0.6.0.post1
-cssselect==1.1.0
-decorator==4.4.2
-docopt==0.6.2
-flake8==3.8.4
-get-ppbrowser==0.1.2
-importlib-metadata==3.7.2; python_version < "3.8"
-ipython==7.21.0
-ipython-genutils==0.2.0
-jedi==0.18.0
+appdirs==1.4.4; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version >= "3.7" and python_version < "4.0"
+atomicwrites==1.4.0; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" and python_version < "4.0" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.4.0" and python_version < "4.0"
+attrs==19.3.0; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.4.0" and python_version >= "3.7" and python_version < "4.0"
+colorama==0.4.4; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" and python_version < "4.0" or python_full_version >= "3.5.0" and sys_platform == "win32" and python_version >= "3.7" and python_version < "4.0"
+cssselect==1.1.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
+flake8==3.8.4; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
+get-ppbrowser==0.1.3; python_version >= "3.7" and python_version < "4.0"
+importlib-metadata==3.7.2; python_version < "3.8" and python_version >= "3.7" and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.8" or python_full_version >= "3.4.0" and python_version < "3.8" and python_version >= "3.6")
 linetimer==0.1.4
 logzero==1.6.3
-lxml==4.6.2
-mccabe==0.6.1
-more-itertools==8.7.0
-packaging==20.9
-parso==0.8.1
-pexpect==4.8.0; sys_platform != "win32"
-pickleshare==0.7.5
-pluggy==0.13.1
-prompt-toolkit==3.0.17
-ptyprocess==0.7.0; sys_platform != "win32"
-py==1.10.0
-pycodestyle==2.6.0
-pydantic==1.8.1
-pyee==7.0.4
-pyflakes==2.2.0
-pygments==2.8.1
-pyparsing==2.4.7
-pyppeteer2==0.2.2
+lxml==4.6.2; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+mccabe==0.6.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
+more-itertools==8.7.0; python_version >= "3.7" and python_version < "4.0"
+packaging==20.9; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.4.0" and python_version >= "3.7" and python_version < "4.0"
+pluggy==0.13.1; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.4.0" and python_version >= "3.7" and python_version < "4.0"
+py==1.10.0; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.4.0" and python_version >= "3.7" and python_version < "4.0"
+pycodestyle==2.6.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
+pydantic==1.8.1; python_version >= "3.7" and python_version < "4.0" and python_full_version >= "3.6.1"
+pyee==7.0.4; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version >= "3.7" and python_version < "4.0"
+pyflakes==2.2.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
+pyparsing==2.4.7; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.5"
+pyppeteer2==0.2.2; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version >= "3.7" and python_version < "4.0"
 pyquery==1.4.3
-pytest==5.4.3
-pytest-asyncio==0.14.0
-python-dotenv==0.15.0
-schema==0.7.4
-tabulate==0.8.9
-tbump==6.3.1
-tomlkit==0.5.11
-tqdm==4.59.0
-traitlets==5.0.5
-typing-extensions==3.7.4.3
-unidecode==1.2.0
-urllib3==1.26.3
-wcwidth==0.2.5
-websockets==8.1
-zipp==3.4.1; python_version < "3.8"
+pytest-asyncio==0.14.0; python_version >= "3.5"
+pytest==5.4.3; python_version >= "3.5"
+python-dotenv==0.15.0; python_version >= "3.7" and python_version < "4.0"
+tqdm==4.59.0; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version >= "3.7" and python_version < "4.0"
+typing-extensions==3.7.4.3; python_version >= "3.7" and python_version < "3.8" and python_full_version >= "3.6.1" and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.8" or python_full_version >= "3.4.0" and python_version < "3.8" and python_version >= "3.6")
+urllib3==1.26.3; python_full_version >= "3.6.1" and python_version < "4" and python_full_version < "4.0.0" and python_version >= "3.7"
+wcwidth==0.2.5; python_version >= "3.7" and python_version < "4.0"
+websockets==8.1; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version >= "3.7" and python_version < "4.0"
+zipp==3.4.1; python_version < "3.8" and python_version >= "3.6" and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.8" or python_full_version >= "3.4.0" and python_version < "3.8" and python_version >= "3.6")
