--- a/.github/workflows/routine-tests.yml
+++ b/.github/workflows/routine-tests.yml
@@ -8,8 +8,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.7, 3.8]
-        poetry-version: [1.1.2]
+        # python-version: [3.7, 3.8]
+        python-version: [3.8]
+        poetry-version: [1.2.1]
         # os: [ubuntu-18.04, macos-latest, windows-latest]
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
