--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "author": "freemt",
   "license": "MIT",
   "scripts": {
-    "pyright": "nodemon -w deepl_scraper_pp2 -w tests -w .venv -e .py -x pyright deepl_scraper_pp tests",
+    "pyright": "nodemon -w deepl_scraper_pp2 -w tests -w .venv -e .py -x pyright deepl_scraper_pp2 tests",
     "pytest": "nodemon -w tests -w deepl_scraper_pp2 -e .py -x pytest tests",
-    "black": "nodemon  -w tests -w deepl_scraper_pp2 -e .py -x \"black tests deepl_scraper_pp && python -m flake8\"",
-    "pylint": "nodemon -w deepl_scraper_pp2 -e .py -x pylint deepl_scraper_pp",
+    "isort": "nodemon -w tests -w deepl_scraper_pp2 -e .py -x isort --profile=black deepl_scraper_pp2",
+    "black": "nodemon  -w tests -w deepl_scraper_pp2 -e .py -x \"black tests deepl_scraper_pp2 && python -m flake8\"",
+    "pylint": "nodemon -w deepl_scraper_pp2 -e .py -x pylint deepl_scraper_pp2",
+    "docstyle": "nodemon -w deepl_scraper_pp2 -e .py -x pydocstyle --convention=google deepl_scraper_pp2",
     "test:deepl_tr": "nodemon -w tests -e .py -x pytest -k deepl_tr tests"
   }
 }
