--- a/.github/workflows/routine-tests.yml
+++ b/.github/workflows/routine-tests.yml
@@ -12,7 +12,8 @@ jobs:
         python-version: [3.8]
         poetry-version: [1.2.1]
         # os: [ubuntu-18.04, macos-latest, windows-latest]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        # os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
