--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "deepl-scraper-pp2"
-version = "0.1.0a0"
+version = "0.1.0a1"
 description = "scrape deepl via pyppeteer2 with para info"
 authors = ["freemt"]
 license = "MIT"
@@ -13,6 +13,8 @@ pyquery = "^1.4.3"
 logzero = "^1.6.3"
 get-ppbrowser = "^0.1.3"
 about-time = "^4.2.1"
+uvicorn = "^0.13.4"
+fastapi = "^0.89.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
