--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ get-ppbrowser = "^0.1.3"
 about-time = "^4.2.1"
 uvicorn = "^0.13.4"
 fastapi = "^0.89.1"
+nest-asyncio = "^1.5.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
